--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
             
             <div class="hero-image">
-                <img src="https://clinicamovimentoevida.com.br/images/Fisio.jpg" alt="Dra. Barbara Paz" class="profile-img" loading="eager">
+                <img src="fotos/fotos/a.jpg" alt="Dra. Barbara Paz" class="profile-img" loading="eager">
                 <div class="crefito-badge">CREFITO: 265288-F</div>
             </div>
         </div>
@@ -267,7 +267,7 @@
                     
                     <div class="treatment-card">
                         <h3><i class="fas fa-check-circle"></i> Exercícios respiratórios</h3>
-                        <p>colocar alguma coisa.</p>
+                        <p>Os exercícios vão ajudar tanto na regeneração celular, quanto na melhora da oxigenação. Também ajudam na estimulação da drenagem linfática, reduzindo edemas.</p>
                     </div>
                 </div>
             </div>
