--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dra. Barbara Paz | Fisioterapeuta Especializada em Quiropraxia e Dermatofuncional | Olinda-PE</title>
-    <meta name="description" content="Fisioterapeuta especializada em Quiropraxia e Dermatofuncional. Tratamentos personalizados para dores musculoesqueléticas e estética facial/corporal em Olinda-PE.">
+    <meta name="description" content="Fisioterapeuta especializada em Quiropraxia, Fisioterapia Motora e Dermatofuncional. Tratamentos personalizados para dores musculoesqueléticas e estética facial/corporal em Olinda-PE.">
     
     <!-- Pré-carregamentos -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -270,6 +270,16 @@
                     <div class="treatment-card">
                         <h3><i class="fas fa-check-circle"></i> Laserterapia</h3>
                         <p>O laserterapia é um tratamento no qual sua principal função é a diminuição do edema e a aceleração da cicatrização dos tecidos. Além de não ser invasivo, é bastante seguro.</p>
+                    </div>
+
+                    <div class="treatment-card">
+                        <h3><i class="fas fa-check-circle"></i>Pós-Operatório de Lesões</h3>
+                        <p>Auxilia na recuperação da mobilidade, força, e função, além de reduzir a dor e prevenir complicações.</p>
+                    </div>
+
+                    <div class="treatment-card">
+                        <h3><i class="fas fa-check-circle"></i>Pós-Operatório de Plásticas</h3>
+                        <p>É fundamental para uma recuperação mais rápida e eficaz, auxiliando na redução de inchaço, dor e prevenindo complicações como fibroses e aderências</p>
                     </div>
                     
                     <div class="treatment-card">
