--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dra. Barbara Paz | Fisioterapeuta Especializada em Quiropraxia e Dermatofuncional | Olinda-PE</title>
+    <title>Dra. Barbara Paz | Fisioterapeuta Especializada em Quiropraxia, Fisioterapia Motora e Dermatofuncional | Olinda-PE</title>
     <meta name="description" content="Fisioterapeuta especializada em Quiropraxia, Fisioterapia Motora e Dermatofuncional. Tratamentos personalizados para dores musculoesqueléticas e estética facial/corporal em Olinda-PE.">
     
     <!-- Pré-carregamentos -->
@@ -47,7 +47,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Saúde e Bem-Estar com Excelência Profissional</h1>
-                <p class="subtitle">Quiropraxia e Fisioterapia Dermatofuncionalpersonalizadas em Olinda-PE</p>
+                <p class="subtitle">Quiropraxia e Fisioterapia Motora e Dermatofuncional personalizadas em Olinda-PE</p>
                 
                 <div class="hero-buttons">
                     <a href="http://wa.me/5581988488191" target="_blank" rel="external" class="btn-primary">
@@ -90,6 +90,12 @@
                         </div>
 
                          <div class="qualification-item">
+                            <i class="fas fa-certificate"></i>
+                            <h3>Formação</h3>
+                            <p>Pós-graduada em Fisioterapia Motora</p>
+                        </div>
+
+                        <div class="qualification-item">
                             <i class="fas fa-certificate"></i>
                             <h3>Formação</h3>
                             <p>Pós-graduada em Fisioterapia Dermatofuncional</p>
