--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
                 
                 <div class="about-content">
-                    <p>Sou fisioterapeuta com pós-graduação em Fisioterapia Dermatofuncional, especializada em tratamentos estéticos não-invasivos e em quiropraxia para alívio de dores musculoesqueléticas.</p>
+                    <p>Sou fisioterapeuta com pós-graduação emQuiropraxia, Fisioterapia Motora e Dermatofuncional, especializada em tratamentos estéticos não-invasivos e em quiropraxia para alívio de dores musculoesqueléticas.</p>
                     
                     <div class="qualifications">
                         <div class="qualification-item">
@@ -92,7 +92,7 @@
                          <div class="qualification-item">
                             <i class="fas fa-certificate"></i>
                             <h3>Formação</h3>
-                            <p>Pós-graduada em Fisioterapia Motora</p>
+                            <p>Pós-graduanda em fisioterapia traumato ortopédica e desportiva</p>
                         </div>
 
                         <div class="qualification-item">
